og data, minor bugfixes and text changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,8 +20,18 @@
       rel="stylesheet"
     />
 
+    <meta property="og:title" content="Resourcebase">
+    <meta name="twitter:title" content="Resourcebase">
+    <meta name="description" content="Debate resources for educators, coaches, youth-workers, volunteers and organisations interested in debate development.">
+    <meta property="og:description" content="Debate resources for educators, coaches, youth-workers, volunteers and organisations interested in debate development.">
+    <meta name="twitter:description" content="Debate resources for educators, coaches, youth-workers, volunteers and organisations interested in debate development.">
+    <meta property="og:image" content="https://resourcebase.idebate.net/resourcebase-OG.jpg">
+    <meta name="twitter:image" content="https://resourcebase.idebate.net/resourcebase-OG.jpg">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+
     <link rel="stylesheet" type="text/css" href="/src/index.scss" />
-    <title>Vite App</title>
+    <title>Resourcebase</title>
   </head>
   <body>
     <div id="app"></div>
